# lomak

./: .gitignore  Cargo.toml  README.md  TODO.txt
.github/workflows/: matrix.yml  release.yml  rust.yml
bindings/c/: Cargo.toml  build.rs
bindings/c/src/: lib.rs
bindings/pyo3/: Cargo.toml
bindings/pyo3/src/: lib.rs
bindings/python/: setup.py
bindings/python/lomak/: __init__.py
python-bindings/: Cargo.toml  README.md
python-bindings/src/: lib.rs
src/: command.rs  error.rs  lib.rs  main.rs  model.rs  services.rs  solver.rs  variables.rs  version.rs
src/command/: buffer.rs  fixpoints.rs  help.rs  load.rs  mod.rs  perturbation.rs  primes.rs  reach.rs  rename.rs  save.rs  show.rs  trapspaces.rs
src/func/: expr.rs  expr2primes.rs  gen.rs  implicant.rs  mod.rs  paths.rs  pattern.rs  patterns.rs  state.rs  variables.rs
src/func/convert/: expr2primes.rs  mod.rs
src/func/repr/: expr.rs  mod.rs  paths.rs
src/helper/: error.rs  mod.rs  version.rs
src/helper/solver/: clingo.rs  mod.rs
src/model/: actions.rs  backend.rs  io.rs  layout.rs  modifier.rs  rule.rs
src/model/actions/: export.rs  fixpoints.rs  mod.rs  primes.rs  reach.rs  show.rs  stable.rs  trapspaces.rs
src/model/io/: bnet.rs  boolsim.rs  mnet.rs  sbml.rs
src/model/modifier/: buffer.rs  perturbation.rs  rename.rs
src/solver/: clingo.rs  path_merger.rs
