[package]
name = "lomak"
version = "0.1.0"
authors = ["Aurelien Naldi <aurelien.naldi@gmail.com>"]
description = "Logical Model Analysis Kit"
edition = "2018"

[dependencies]
bit-set     = "0.5"
clingo      = "0.6"
itertools   = "0.9"
lazy_static = "1.4"
pest        = "2.1"
pest_derive = "2.1"
regex       = "1"
structopt   = { version = "0.3", default-features = false }

[dependencies.clap]
version = "2"
default-features = false
features = [ "color", "wrap_help" ]


# Release profile:
#  * more optimisations and smaller binary
#  * less debug tools and longer build time
[profile.release]
debug = false
#panic = "abort"
lto = true
codegen-units = 1
incremental = false 
opt-level = 3

