[package]
name = "lomak"
version = "0.1.0"
authors = ["Aurelien Naldi <aurelien.naldi@gmail.com>"]
description = "Logical Model Analysis Kit"
edition = "2018"

[dependencies]
bit-set     = "0.5"
clap        = { version = "2", default-features = false, features = [ "color", "wrap_help" ] }
clingo      = { version = "0.6", features = ["derive"] }
itertools   = "0.10"
once_cell   = "1.7"
pest        = "2.1"
pest_derive = "2.1"
regex       = "1"
roxmltree   = "0.13"
structopt   = { version = "0.3", default-features = false }
thiserror   = "1.0"
xmlwriter   = "0.1"


# Release profile:
#  * more optimisations and smaller binary
#  * less debug tools and longer build time
[profile.release]
debug = false
#panic = "abort"
lto = true
codegen-units = 1
incremental = false 
opt-level = 3

